--- a/Present/Base.lproj/Main.storyboard
+++ b/Present/Base.lproj/Main.storyboard
@@ -204,6 +204,10 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="6oI-ZY-Tk4">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sdA-zS-mA1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -252,7 +256,17 @@
                             <outlet property="delegate" destination="tVk-5b-TnQ" id="Dd4-lK-f95"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Roster" id="m1Q-Dr-mv0"/>
+                    <navigationItem key="navigationItem" title="Roster" id="m1Q-Dr-mv0">
+                        <barButtonItem key="rightBarButtonItem" title="Beacon Details" id="EZI-95-uir">
+                            <connections>
+                                <action selector="beaconDetails:" destination="tVk-5b-TnQ" id="sOg-Er-kid"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="cXF-QB-ib1">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TEH-KP-7VL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
